--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>EnithV - Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        :root {
+        : root {
             --primary-color: #2c3e50;
             --secondary-color: #3498db;
             --accent-color: #e74c3c;
@@ -468,7 +468,7 @@
                     <ul>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <span>enith.vargas@example.com</span>
+                            <span>ingegvargas@example.com</span>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
