Fix profile image filename
Change fotogt.jpg to fotogt.JPG to match uploaded file

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <!-- Header with main information -->
     <header>
         <div class="container header-content">
-            <img src="fotogt.jpg" alt="EnithV" class="profile-img">
+            <img src="fotogt.JPG" alt="EnithV" class="profile-img">
             <h1>Gicela Vargas</h1>
             <p class="tagline">Civil Engineer | Data Analyst (Power BI/Looker Studio) | AI Content Writer for LLMs (LATAM)</p>
             <p>"Try Just One More Time"</p>
@@ -511,3 +511,4 @@
     </script>
 </body>
 </html>
+
