--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <style>
 
-        :root {
+        : root {
 
             --primary-color: #2c3e50;
 
@@ -326,7 +326,7 @@
 
         .skill-list li:before {
 
-            content: "âœ”";
+            content: "✔";
 
             position: absolute;
 
@@ -1023,4 +1023,5 @@
 </body>
 
 </html>
+
 
