Update email location

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             padding-left: 1.5rem;
         }
         
-        .skill-list li:before {
+        .skill-list li: before {
             content: "✔";
             position: absolute;
             left: 0;
@@ -468,11 +468,11 @@
                     <ul>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <span>enith.vargas@example.com</span>
+                            <span>egicelav@gmail.com</span>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Bogotá, Colombia</span>
+                            <span>Global, Remote</span>
                         </li>
                     </ul>
                     <div class="social-links">
@@ -511,4 +511,5 @@
     </script>
 </body>
 </html>
+
 
