--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             width: 100%;
             height: 100%;
             background: url('https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-4.0.3&auto=format&fit=crop&w=1500&q=80') center/cover;
-            opacity: 0.2;
+            opacity: 0.1;
             z-index: 0;
         }
         
@@ -162,7 +162,7 @@
         }
         
         .skill-list li:before {
-            content: "✔";
+            content: "✓";
             position: absolute;
             left: 0;
             color: var(--accent-color);
@@ -493,7 +493,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Gicela Vargas. All rights reserved.</p>
+            <p>&copy; 2024 Gicela Vargas. All rights reserved.</p>
             <p>Try Just One More Time</p>
         </div>
     </footer>
