Update to X instead of twitter

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                         <a href="#" title="Twitter">
-                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-x-twitter"></i>
                         </a>
                     </div>
                 </div>
@@ -511,3 +511,4 @@
     </script>
 </body>
 </html>
+
