--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EnithV - Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>Gicela Vargas - Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         :root {
             --primary-color: #2c3e50;
@@ -80,6 +80,7 @@
             object-fit: cover;
             border: 5px solid rgba(255, 255, 255, 0.3);
             margin-bottom: 1rem;
+            background-color: #fff; /* Placeholder mientras carga la imagen */
         }
         
         h1 {
@@ -332,7 +333,7 @@
     <!-- Header with main information -->
     <header>
         <div class="container header-content">
-            <img src="fotogt.JPG" alt="EnithV" class="profile-img">
+            <img src="fotogt.JPG" alt="Gicela Vargas" class="profile-img" onerror="this.src='https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80'">
             <h1>Gicela Vargas</h1>
             <p class="tagline">Civil Engineer | Data Analyst (Power BI/Looker Studio) | AI Content Writer for LLMs (LATAM)</p>
             <p>"Try Just One More Time"</p>
@@ -479,10 +480,10 @@
                         <a href="https://github.com/EnithV" title="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="#" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/gicelavargas/?locale=en_US" title="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="#" title="Twitter">
+                        <a href="#" title="X (Twitter)">
                             <i class="fab fa-x-twitter"></i>
                         </a>
                     </div>
@@ -511,4 +512,3 @@
     </script>
 </body>
 </html>
-
