--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <div class="skill-category">
                         <h3><i class="fas fa-database"></i> Data & AI</h3>
                         <ul class="skill-list">
-                            <li>Optimizing Spanish-language AI responses through ethical prompt design and dataset curation</li>
+                            <li>Optimizing English/Spanish-language AI responses through ethical prompt design and dataset curation</li>
                             <li>Transforming raw data into insights with Power BI and Looker Studio</li>
                             <li>Reducing biases in AI training data</li>
                         </ul>
@@ -405,7 +405,7 @@
                 <div class="skill">
                     <i class="fas fa-brain"></i>
                     <h3>AI & Prompt Engineering</h3>
-                    <p>Ethical AI design, dataset curation, Spanish-language optimization</p>
+                    <p>Ethical AI design, dataset curation, English/Spanish-language optimization</p>
                 </div>
                 <div class="skill">
                     <i class="fas fa-tools"></i>
@@ -438,7 +438,7 @@
                 <div class="project-card">
                     <img src="https://images.unsplash.com/photo-1534723328310-e82dad3ee43f?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="AI Optimization Project" class="project-img">
                     <div class="project-info">
-                        <h3 class="project-title">Spanish-language AI Optimization</h3>
+                        <h3 class="project-title">English/Spanish-language AI Optimization</h3>
                         <p>Ethical prompt design and dataset curation for improved AI responses in Spanish.</p>
                         <div class="project-links">
                             <a href="#"><i class="fab fa-github"></i> Code</a>
@@ -512,3 +512,4 @@
     </script>
 </body>
 </html>
+
