Update Water Quality Monitor project links
Add live demo and GitHub links for Water Quality Monitor project

--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                         <h3 class="project-title">Data Analytics Certification Project</h3>
                         <p>Comprehensive data analysis project for Guayerd/IBM certification.</p>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> Code</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <a href="https://github.com/EnithV/water-quality-monitor"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://enithv-water-quality-monitor-app-mqmqsd.streamlit.app/"><i class="fas fa-external-link-alt"></i> Demo</a>
                         </div>
                     </div>
                 </div>
@@ -512,5 +512,6 @@
     </script>
 </body>
 </html>
+
 
 
