Update Water Quality Monitor project links v2
Add live demo and GitHub links for Water Quality Monitor project

--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                         <h3 class="project-title">Data Analytics Certification Project</h3>
                         <p>Comprehensive data analysis project for Guayerd/IBM certification.</p>
                         <div class="project-links">
-                            <a href="https://github.com/EnithV/water-quality-monitor"><i class="fab fa-github"></i> Code</a>
-                            <a href="https://enithv-water-quality-monitor-app-mqmqsd.streamlit.app/"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <a href="#"><i class="fab fa-github"></i> Code</a>
+                            <a href="#"><i class="fas fa-external-link-alt"></i> Demo</a>
                         </div>
                     </div>
                 </div>
@@ -447,13 +447,13 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Engineering Project" class="project-img">
+                    <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Water Quality Dashboard" class="project-img">
                     <div class="project-info">
-                        <h3 class="project-title">Infrastructure Audit</h3>
-                        <p>Technical and financial audit for urban infrastructure projects.</p>
+                        <h3 class="project-title">Water Quality Monitoring Dashboard</h3>
+                            <p>Real-time water treatment plant monitoring system with interactive visualizations, alert system, and compliance tracking using Streamlit and Python.</p>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> Code</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <a href="https://github.com/EnithV/water-quality-monitor"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://enithv-water-quality-monitor-app-mqmqsd.streamlit.app/"><i class="fas fa-external-link-alt"></i> Demo</a>
                         </div>
                     </div>
                 </div>
@@ -512,6 +512,4 @@
     </script>
 </body>
 </html>
-
-
 
