Update Water Quality Monitor project with live demo and GitHub links
Connect Water Quality Monitor project to live demo

--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
                         <h3 class="project-title">Water Quality Monitoring Dashboard</h3>
                             <p>Real-time water treatment plant monitoring system with interactive visualizations, alert system, and compliance tracking using Streamlit and Python.</p>
                         <div class="project-links">
-                            <a href="https://github.com/EnithV/water-quality-monitor"><i class="fab fa-github"></i> Code</a>
-                            <a href="https://enithv-water-quality-monitor-app-mqmqsd.streamlit.app/"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <a href="https://github.com/EnithV/water-quality-monitor" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://enithv-water-quality-monitor-app-mqmqsd.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
                         </div>
                     </div>
                 </div>
@@ -512,5 +512,6 @@
     </script>
 </body>
 </html>
+
 
 
