Update LLM pipeline project with GitHub links and sample output

--- a/index.html
+++ b/index.html
@@ -438,11 +438,11 @@
                 <div class="project-card">
                     <img src="https://images.unsplash.com/photo-1534723328310-e82dad3ee43f?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="AI Optimization Project" class="project-img">
                     <div class="project-info">
-                        <h3 class="project-title">English and Spanish-language AI Optimization</h3>
-                        <p>Ethical prompt design and dataset curation for improved AI responses in English and Spanish.</p>
+                        <h3 class="project-title">LLM LATAM Content Pipeline</h3>
+                        <p>Automated content generation and quality assurance pipeline for ethical LLM training with LATAM focus and bias detection.</p>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> Code</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <a href="https://github.com/EnithV/llm-latam-content-pipeline" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://github.com/EnithV/llm-latam-content-pipeline/blob/main/sample_output.json" target="_blank"><i class="fas fa-external-link-alt"></i> Sample Output</a>
                         </div>
                     </div>
                 </div>
@@ -512,6 +512,7 @@
     </script>
 </body>
 </html>
+
 
 
 
