--- a/index.html
+++ b/index.html
@@ -425,15 +425,16 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Data Analysis Project" class="project-img">
+                    <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Construction Compliance Project" class="project-img">
                     <div class="project-info">
-                        <h3 class="project-title">Data Analytics Certification Project</h3>
-                        <p>Comprehensive data analysis project for Guayerd/IBM certification.</p>
+                        <h3 class="project-title">Construction Compliance Analyzer</h3>
+                        <p>Machine learning system for automated construction project compliance analysis and risk assessment with predictive analytics.</p>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> Code</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <a href="https://github.com/EnithV/construction-compliance-analyzer" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://enithv-construction-compliance-analy-compliance-analyzer-y1p8wg.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
                         </div>
                     </div>
+                </div>
                 </div>
                 <div class="project-card">
                     <img src="https://images.unsplash.com/photo-1534723328310-e82dad3ee43f?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="AI Optimization Project" class="project-img">
@@ -450,7 +451,7 @@
                     <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Water Quality Dashboard" class="project-img">
                     <div class="project-info">
                         <h3 class="project-title">Water Quality Monitoring Dashboard</h3>
-                            <p>Real-time water treatment plant monitoring system with interactive visualizations, alert system, and compliance tracking using Streamlit and Python.</p>
+                            <p>Real-time water treatment plant monitoring system with interactive visualizations, alert system, and compliance tracking.</p>
                         <div class="project-links">
                             <a href="https://github.com/EnithV/water-quality-monitor" target="_blank"><i class="fab fa-github"></i> Code</a>
                             <a href="https://enithv-water-quality-monitor-app-mqmqsd.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
@@ -512,6 +513,7 @@
     </script>
 </body>
 </html>
+
 
 
 
