feat: add target=_blank to social links for improved UX
- Added target="_blank" to all social media links
- Included rel="noopener noreferrer" for security best practices
- Ensures external links open in new tabs while maintaining site security
- Improves user experience by keeping portfolio open while visiting social profiles"

--- a/index.html
+++ b/index.html
@@ -477,13 +477,13 @@
                         </li>
                     </ul>
                     <div class="social-links">
-                        <a href="https://github.com/EnithV" title="GitHub">
+                        <a href="https://github.com/EnithV" target="_blank" rel="noopener noreferrer" title="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/gicelavargas/?locale=en_US" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/gicelavargas/?locale=en_US" target="_blank" rel="noopener noreferrer" title="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="#" title="X (Twitter)">
+                        <a href="#" target="_blank" rel="noopener noreferrer" title="X (Twitter)">
                             <i class="fab fa-x-twitter"></i>
                         </a>
                     </div>
@@ -512,6 +512,7 @@
     </script>
 </body>
 </html>
+
 
 
 
