--- a/index.html
+++ b/index.html
@@ -457,6 +457,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="project-card">
+                    <img src="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Potenciar Solidario Financial Dashboard" class="project-img">
+                    <div class="project-info">
+                        <h3 class="project-title">Potenciar Solidario Financial Dashboard</h3>
+                        <p>Power BI dashboard for comprehensive NGO financial management and transparency with revenue/expense tracking, donor analytics, and operational metrics.</p>
+                        <div class="project-links">
+                            <a href="https://github.com/EnithV/potenciar-solidario-financial-analysis" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://github.com/EnithV/potenciar-solidario-financial-analysis/tree/main" target="_blank"><i class="fas fa-external-link-alt"></i> Details</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -512,6 +523,7 @@
     </script>
 </body>
 </html>
+
 
 
 
