--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <div class="container header-content">
             <img src="fotogt.JPG" alt="Gicela Vargas" class="profile-img" onerror="this.src='https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80'">
             <h1>Gicela Vargas</h1>
-            <p class="tagline">Civil Engineer | Data Analyst (Power BI/Looker Studio) | AI Content Writer for LLMs (LATAM)</p>
+            <p class="tagline">Civil Engineer | Data Analyst (Power BI/Looker Studio) | AI Trainer for LLMs (LATAM)</p>
             <p>"Try Just One More Time"</p>
         </div>
     </header>
@@ -523,6 +523,7 @@
     </script>
 </body>
 </html>
+
 
 
 
